--- a/html/header.html
+++ b/html/header.html
@@ -15,7 +15,7 @@
       <header>
         <nav>
           <div class="nav-logo">
-            <span><a href="index.html">TrendMart</a></span>
+            <span><a href="../index.html">TrendMart</a></span>
           </div>
           <div class="nav-search">
             <input
