--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TrendMart | Online Shopping</title>
     <link rel="icon" href="/images/favicon.png" type="image/png">
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -29,11 +29,11 @@
         <div class="categories" id="categoryContainer">
           <div class="category">
             <img src="../Men'sFashion Images/k10.webp" alt="MenPhoto" />
-            <h3><a href="MensFashion.html">Men</a></h3>
+            <h3><a href="/html/MensFashion.html">Men</a></h3>
           </div>
           <div class="category">
             <img src="../Women'sFashionImages/U10.webp" alt="WomenPhoto" />
-            <h3><a href="WomensFashion.html">Women</a></h3>
+            <h3><a href="/html/WomensFashion.html">Women</a></h3>
           </div>
         </div>
       </section>
@@ -45,6 +45,6 @@
     </main>
     <!--Footer Section-->
     <div id="footer"></div>
-    <script type="module" src="/js/script.js"></script>
+    <script type="module" src="js/script.js"></script>
   </body>
 </html>
