--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="imageSlider">
           <button id="prev">&lsaquo;</button>
           <button id="next">&rsaquo;</button>
-          <img src="../images/img1.PNG" alt="SliderImg" id="Image" />
+          <img src="/images/img1.PNG" alt="SliderImg" id="Image" />
         </div>
       </section>
       <!--Categories-->
