--- a/html/footer.html
+++ b/html/footer.html
@@ -17,7 +17,7 @@
           <div class="footer-col">
             <h4>TRENDMART</h4>
             <ul>
-              <li><a href="index.html">Home</a></li>
+              <li><a href="../index.html">Home</a></li>
               <li><a href="MensFashion.html">Men Fashion</a></li>
               <li><a href="WomensFashion.html">Women Fashion</a></li>
               <li><a href="#">affiliate program</a></li>
