--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="imageSlider">
           <button id="prev">&lsaquo;</button>
           <button id="next">&rsaquo;</button>
-          <img src="/images/img1.png" alt="BannerImage" id="Image" />
+          <img src="/images/desktop-img1.webp" alt="BannerImage" id="Image" />
         </div>
       </section>
       <!--Categories-->
